Kaggle Notebook | LinearRegression | Version 8

--- a/linearregression.ipynb
+++ b/linearregression.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f7925c7f",
+   "id": "dce6ce25",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "papermill": {
-     "duration": 0.005817,
-     "end_time": "2023-05-15T23:57:55.762840",
+     "duration": 0.006878,
+     "end_time": "2023-05-18T00:27:04.209309",
      "exception": false,
-     "start_time": "2023-05-15T23:57:55.757023",
+     "start_time": "2023-05-18T00:27:04.202431",
      "status": "completed"
     },
     "tags": []
@@ -25,20 +25,20 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c843b083",
+   "id": "c4f1bf72",
    "metadata": {
     "_kg_hide-input": true,
     "execution": {
-     "iopub.execute_input": "2023-05-15T23:57:55.774694Z",
-     "iopub.status.busy": "2023-05-15T23:57:55.774241Z",
-     "iopub.status.idle": "2023-05-15T23:57:56.991798Z",
-     "shell.execute_reply": "2023-05-15T23:57:56.990663Z"
+     "iopub.execute_input": "2023-05-18T00:27:04.223533Z",
+     "iopub.status.busy": "2023-05-18T00:27:04.222634Z",
+     "iopub.status.idle": "2023-05-18T00:27:05.532904Z",
+     "shell.execute_reply": "2023-05-18T00:27:05.531396Z"
     },
     "papermill": {
-     "duration": 1.227054,
-     "end_time": "2023-05-15T23:57:56.994839",
+     "duration": 1.32121,
+     "end_time": "2023-05-18T00:27:05.536237",
      "exception": false,
-     "start_time": "2023-05-15T23:57:55.767785",
+     "start_time": "2023-05-18T00:27:04.215027",
      "status": "completed"
     },
     "tags": []
@@ -50,18 +50,20 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import mean_absolute_error as mae\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "from sklearn.metrics import mean_squared_error"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "87ec1395",
+   "id": "f2867457",
    "metadata": {
     "papermill": {
-     "duration": 0.004154,
-     "end_time": "2023-05-15T23:57:57.004029",
+     "duration": 0.0051,
+     "end_time": "2023-05-18T00:27:05.546895",
      "exception": false,
-     "start_time": "2023-05-15T23:57:56.999875",
+     "start_time": "2023-05-18T00:27:05.541795",
      "status": "completed"
     },
     "tags": []
@@ -74,19 +76,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4150ebc5",
+   "id": "c0627f15",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-15T23:57:57.014743Z",
-     "iopub.status.busy": "2023-05-15T23:57:57.014339Z",
-     "iopub.status.idle": "2023-05-15T23:57:57.208801Z",
-     "shell.execute_reply": "2023-05-15T23:57:57.207425Z"
+     "iopub.execute_input": "2023-05-18T00:27:05.559581Z",
+     "iopub.status.busy": "2023-05-18T00:27:05.559092Z",
+     "iopub.status.idle": "2023-05-18T00:27:05.735526Z",
+     "shell.execute_reply": "2023-05-18T00:27:05.734247Z"
     },
     "papermill": {
-     "duration": 0.204022,
-     "end_time": "2023-05-15T23:57:57.212497",
+     "duration": 0.186338,
+     "end_time": "2023-05-18T00:27:05.738547",
      "exception": false,
-     "start_time": "2023-05-15T23:57:57.008475",
+     "start_time": "2023-05-18T00:27:05.552209",
      "status": "completed"
     },
     "tags": []
@@ -476,19 +478,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "49b3da51",
+   "id": "4f254c2b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-15T23:57:57.224915Z",
-     "iopub.status.busy": "2023-05-15T23:57:57.224446Z",
-     "iopub.status.idle": "2023-05-15T23:57:57.252289Z",
-     "shell.execute_reply": "2023-05-15T23:57:57.250925Z"
+     "iopub.execute_input": "2023-05-18T00:27:05.752648Z",
+     "iopub.status.busy": "2023-05-18T00:27:05.752177Z",
+     "iopub.status.idle": "2023-05-18T00:27:05.783648Z",
+     "shell.execute_reply": "2023-05-18T00:27:05.782377Z"
     },
     "papermill": {
-     "duration": 0.03728,
-     "end_time": "2023-05-15T23:57:57.255111",
+     "duration": 0.041689,
+     "end_time": "2023-05-18T00:27:05.786355",
      "exception": false,
-     "start_time": "2023-05-15T23:57:57.217831",
+     "start_time": "2023-05-18T00:27:05.744666",
      "status": "completed"
     },
     "tags": []
@@ -708,19 +710,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "72dddbcf",
+   "id": "53dca933",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-15T23:57:57.268885Z",
-     "iopub.status.busy": "2023-05-15T23:57:57.268480Z",
-     "iopub.status.idle": "2023-05-15T23:57:57.298059Z",
-     "shell.execute_reply": "2023-05-15T23:57:57.297133Z"
+     "iopub.execute_input": "2023-05-18T00:27:05.801251Z",
+     "iopub.status.busy": "2023-05-18T00:27:05.800579Z",
+     "iopub.status.idle": "2023-05-18T00:27:05.833077Z",
+     "shell.execute_reply": "2023-05-18T00:27:05.830907Z"
     },
     "papermill": {
-     "duration": 0.040306,
-     "end_time": "2023-05-15T23:57:57.301151",
+     "duration": 0.044396,
+     "end_time": "2023-05-18T00:27:05.837231",
      "exception": false,
-     "start_time": "2023-05-15T23:57:57.260845",
+     "start_time": "2023-05-18T00:27:05.792835",
      "status": "completed"
     },
     "tags": []
@@ -768,19 +770,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f62fb984",
+   "id": "c6d7b21f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-15T23:57:57.315493Z",
-     "iopub.status.busy": "2023-05-15T23:57:57.314262Z",
-     "iopub.status.idle": "2023-05-15T23:57:57.405583Z",
-     "shell.execute_reply": "2023-05-15T23:57:57.404277Z"
+     "iopub.execute_input": "2023-05-18T00:27:05.852800Z",
+     "iopub.status.busy": "2023-05-18T00:27:05.852366Z",
+     "iopub.status.idle": "2023-05-18T00:27:05.946869Z",
+     "shell.execute_reply": "2023-05-18T00:27:05.945475Z"
     },
     "papermill": {
-     "duration": 0.101408,
-     "end_time": "2023-05-15T23:57:57.408389",
+     "duration": 0.10582,
+     "end_time": "2023-05-18T00:27:05.950088",
      "exception": false,
-     "start_time": "2023-05-15T23:57:57.306981",
+     "start_time": "2023-05-18T00:27:05.844268",
      "status": "completed"
     },
     "tags": []
@@ -1072,19 +1074,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "44b27331",
+   "id": "3fcc839a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-15T23:57:57.422804Z",
-     "iopub.status.busy": "2023-05-15T23:57:57.422040Z",
-     "iopub.status.idle": "2023-05-15T23:57:57.489256Z",
-     "shell.execute_reply": "2023-05-15T23:57:57.487950Z"
+     "iopub.execute_input": "2023-05-18T00:27:05.967119Z",
+     "iopub.status.busy": "2023-05-18T00:27:05.966644Z",
+     "iopub.status.idle": "2023-05-18T00:27:06.036564Z",
+     "shell.execute_reply": "2023-05-18T00:27:06.035120Z"
     },
     "papermill": {
-     "duration": 0.077717,
-     "end_time": "2023-05-15T23:57:57.492347",
+     "duration": 0.081776,
+     "end_time": "2023-05-18T00:27:06.039434",
      "exception": false,
-     "start_time": "2023-05-15T23:57:57.414630",
+     "start_time": "2023-05-18T00:27:05.957658",
      "status": "completed"
     },
     "tags": []
@@ -1699,13 +1701,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "060a1ea3",
+   "id": "cf7e1236",
    "metadata": {
     "papermill": {
-     "duration": 0.006848,
-     "end_time": "2023-05-15T23:57:57.506600",
+     "duration": 0.0077,
+     "end_time": "2023-05-18T00:27:06.055410",
      "exception": false,
-     "start_time": "2023-05-15T23:57:57.499752",
+     "start_time": "2023-05-18T00:27:06.047710",
      "status": "completed"
     },
     "tags": []
@@ -1718,19 +1720,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "32c8f243",
+   "id": "82122d19",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-15T23:57:57.522822Z",
-     "iopub.status.busy": "2023-05-15T23:57:57.522086Z",
-     "iopub.status.idle": "2023-05-15T23:58:12.585218Z",
-     "shell.execute_reply": "2023-05-15T23:58:12.583259Z"
+     "iopub.execute_input": "2023-05-18T00:27:06.074027Z",
+     "iopub.status.busy": "2023-05-18T00:27:06.073496Z",
+     "iopub.status.idle": "2023-05-18T00:27:21.009216Z",
+     "shell.execute_reply": "2023-05-18T00:27:21.007347Z"
     },
     "papermill": {
-     "duration": 15.076863,
-     "end_time": "2023-05-15T23:58:12.590452",
+     "duration": 14.951194,
+     "end_time": "2023-05-18T00:27:21.014724",
      "exception": false,
-     "start_time": "2023-05-15T23:57:57.513589",
+     "start_time": "2023-05-18T00:27:06.063530",
      "status": "completed"
     },
     "tags": []
@@ -1758,13 +1760,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f37d5a8",
+   "id": "9dc478d5",
    "metadata": {
     "papermill": {
-     "duration": 0.015136,
-     "end_time": "2023-05-15T23:58:12.622169",
+     "duration": 0.016144,
+     "end_time": "2023-05-18T00:27:21.048308",
      "exception": false,
-     "start_time": "2023-05-15T23:58:12.607033",
+     "start_time": "2023-05-18T00:27:21.032164",
      "status": "completed"
     },
     "tags": []
@@ -1776,20 +1778,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3f93b8c2",
+   "execution_count": 8,
+   "id": "9a7c20e8",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-05-18T00:27:21.085263Z",
+     "iopub.status.busy": "2023-05-18T00:27:21.084384Z",
+     "iopub.status.idle": "2023-05-18T00:27:21.096522Z",
+     "shell.execute_reply": "2023-05-18T00:27:21.094840Z"
+    },
     "papermill": {
-     "duration": 0.014528,
-     "end_time": "2023-05-15T23:58:12.652188",
+     "duration": 0.036289,
+     "end_time": "2023-05-18T00:27:21.101598",
      "exception": false,
-     "start_time": "2023-05-15T23:58:12.637660",
+     "start_time": "2023-05-18T00:27:21.065309",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculation of Mean Squared Error (MSE)\n",
+    "mean_squared_error(y,predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0d228c9c",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-05-18T00:27:21.123487Z",
+     "iopub.status.busy": "2023-05-18T00:27:21.122247Z",
+     "iopub.status.idle": "2023-05-18T00:27:21.131089Z",
+     "shell.execute_reply": "2023-05-18T00:27:21.129771Z"
+    },
+    "papermill": {
+     "duration": 0.023168,
+     "end_time": "2023-05-18T00:27:21.133691",
+     "exception": false,
+     "start_time": "2023-05-18T00:27:21.110523",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[221900., 538000., 180000., ..., 402101., 400000., 325000.]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "db54096a",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-05-18T00:27:21.153068Z",
+     "iopub.status.busy": "2023-05-18T00:27:21.152356Z",
+     "iopub.status.idle": "2023-05-18T00:27:21.159196Z",
+     "shell.execute_reply": "2023-05-18T00:27:21.158267Z"
+    },
+    "papermill": {
+     "duration": 0.019446,
+     "end_time": "2023-05-18T00:27:21.161671",
+     "exception": false,
+     "start_time": "2023-05-18T00:27:21.142225",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[221900., 538000., 180000., ..., 402101., 400000., 325000.]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions"
+   ]
   }
  ],
  "metadata": {
@@ -1812,14 +1906,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 30.589902,
-   "end_time": "2023-05-15T23:58:13.493804",
+   "duration": 31.635852,
+   "end_time": "2023-05-18T00:27:21.994935",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-05-15T23:57:42.903902",
+   "start_time": "2023-05-18T00:26:50.359083",
    "version": "2.4.0"
   }
  },
