Kaggle Notebook | LinearRegression | Version 9

--- a/linearregression.ipynb
+++ b/linearregression.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dce6ce25",
+   "id": "338f2baf",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "papermill": {
-     "duration": 0.006878,
-     "end_time": "2023-05-18T00:27:04.209309",
+     "duration": 0.006579,
+     "end_time": "2023-05-19T00:16:28.114625",
      "exception": false,
-     "start_time": "2023-05-18T00:27:04.202431",
+     "start_time": "2023-05-19T00:16:28.108046",
      "status": "completed"
     },
     "tags": []
@@ -19,26 +19,26 @@
     "# Introduction\n",
     "* [Step 1: Exploratory Data Analysis](#step-one)\n",
     "* [Step 2: Model Training](#step-two)\n",
-    "* [Step 3: Data Visualization](#step-three)"
+    "* [Step 3: Model Validation](#step-three)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c4f1bf72",
+   "id": "85acdad6",
    "metadata": {
     "_kg_hide-input": true,
     "execution": {
-     "iopub.execute_input": "2023-05-18T00:27:04.223533Z",
-     "iopub.status.busy": "2023-05-18T00:27:04.222634Z",
-     "iopub.status.idle": "2023-05-18T00:27:05.532904Z",
-     "shell.execute_reply": "2023-05-18T00:27:05.531396Z"
+     "iopub.execute_input": "2023-05-19T00:16:28.128814Z",
+     "iopub.status.busy": "2023-05-19T00:16:28.127811Z",
+     "iopub.status.idle": "2023-05-19T00:16:29.580500Z",
+     "shell.execute_reply": "2023-05-19T00:16:29.579065Z"
     },
     "papermill": {
-     "duration": 1.32121,
-     "end_time": "2023-05-18T00:27:05.536237",
+     "duration": 1.463882,
+     "end_time": "2023-05-19T00:16:29.584100",
      "exception": false,
-     "start_time": "2023-05-18T00:27:04.215027",
+     "start_time": "2023-05-19T00:16:28.120218",
      "status": "completed"
     },
     "tags": []
@@ -57,13 +57,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2867457",
+   "id": "9af9f816",
    "metadata": {
     "papermill": {
-     "duration": 0.0051,
-     "end_time": "2023-05-18T00:27:05.546895",
+     "duration": 0.005752,
+     "end_time": "2023-05-19T00:16:29.596257",
      "exception": false,
-     "start_time": "2023-05-18T00:27:05.541795",
+     "start_time": "2023-05-19T00:16:29.590505",
      "status": "completed"
     },
     "tags": []
@@ -76,19 +76,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c0627f15",
+   "id": "3bd20549",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-18T00:27:05.559581Z",
-     "iopub.status.busy": "2023-05-18T00:27:05.559092Z",
-     "iopub.status.idle": "2023-05-18T00:27:05.735526Z",
-     "shell.execute_reply": "2023-05-18T00:27:05.734247Z"
+     "iopub.execute_input": "2023-05-19T00:16:29.608970Z",
+     "iopub.status.busy": "2023-05-19T00:16:29.608515Z",
+     "iopub.status.idle": "2023-05-19T00:16:29.818723Z",
+     "shell.execute_reply": "2023-05-19T00:16:29.817273Z"
     },
     "papermill": {
-     "duration": 0.186338,
-     "end_time": "2023-05-18T00:27:05.738547",
+     "duration": 0.220086,
+     "end_time": "2023-05-19T00:16:29.821704",
      "exception": false,
-     "start_time": "2023-05-18T00:27:05.552209",
+     "start_time": "2023-05-19T00:16:29.601618",
      "status": "completed"
     },
     "tags": []
@@ -478,19 +478,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4f254c2b",
+   "id": "de856edf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-18T00:27:05.752648Z",
-     "iopub.status.busy": "2023-05-18T00:27:05.752177Z",
-     "iopub.status.idle": "2023-05-18T00:27:05.783648Z",
-     "shell.execute_reply": "2023-05-18T00:27:05.782377Z"
+     "iopub.execute_input": "2023-05-19T00:16:29.837823Z",
+     "iopub.status.busy": "2023-05-19T00:16:29.836098Z",
+     "iopub.status.idle": "2023-05-19T00:16:29.865640Z",
+     "shell.execute_reply": "2023-05-19T00:16:29.864355Z"
     },
     "papermill": {
-     "duration": 0.041689,
-     "end_time": "2023-05-18T00:27:05.786355",
+     "duration": 0.04048,
+     "end_time": "2023-05-19T00:16:29.868402",
      "exception": false,
-     "start_time": "2023-05-18T00:27:05.744666",
+     "start_time": "2023-05-19T00:16:29.827922",
      "status": "completed"
     },
     "tags": []
@@ -710,19 +710,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "53dca933",
+   "id": "0a6970e8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-18T00:27:05.801251Z",
-     "iopub.status.busy": "2023-05-18T00:27:05.800579Z",
-     "iopub.status.idle": "2023-05-18T00:27:05.833077Z",
-     "shell.execute_reply": "2023-05-18T00:27:05.830907Z"
+     "iopub.execute_input": "2023-05-19T00:16:29.883522Z",
+     "iopub.status.busy": "2023-05-19T00:16:29.882900Z",
+     "iopub.status.idle": "2023-05-19T00:16:29.917209Z",
+     "shell.execute_reply": "2023-05-19T00:16:29.915464Z"
     },
     "papermill": {
-     "duration": 0.044396,
-     "end_time": "2023-05-18T00:27:05.837231",
+     "duration": 0.045671,
+     "end_time": "2023-05-19T00:16:29.920620",
      "exception": false,
-     "start_time": "2023-05-18T00:27:05.792835",
+     "start_time": "2023-05-19T00:16:29.874949",
      "status": "completed"
     },
     "tags": []
@@ -770,19 +770,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c6d7b21f",
+   "id": "5f0b9902",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-18T00:27:05.852800Z",
-     "iopub.status.busy": "2023-05-18T00:27:05.852366Z",
-     "iopub.status.idle": "2023-05-18T00:27:05.946869Z",
-     "shell.execute_reply": "2023-05-18T00:27:05.945475Z"
+     "iopub.execute_input": "2023-05-19T00:16:29.936202Z",
+     "iopub.status.busy": "2023-05-19T00:16:29.935714Z",
+     "iopub.status.idle": "2023-05-19T00:16:30.035089Z",
+     "shell.execute_reply": "2023-05-19T00:16:30.033797Z"
     },
     "papermill": {
-     "duration": 0.10582,
-     "end_time": "2023-05-18T00:27:05.950088",
+     "duration": 0.110604,
+     "end_time": "2023-05-19T00:16:30.038061",
      "exception": false,
-     "start_time": "2023-05-18T00:27:05.844268",
+     "start_time": "2023-05-19T00:16:29.927457",
      "status": "completed"
     },
     "tags": []
@@ -1074,19 +1074,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3fcc839a",
+   "id": "11b3231e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-18T00:27:05.967119Z",
-     "iopub.status.busy": "2023-05-18T00:27:05.966644Z",
-     "iopub.status.idle": "2023-05-18T00:27:06.036564Z",
-     "shell.execute_reply": "2023-05-18T00:27:06.035120Z"
+     "iopub.execute_input": "2023-05-19T00:16:30.054745Z",
+     "iopub.status.busy": "2023-05-19T00:16:30.054291Z",
+     "iopub.status.idle": "2023-05-19T00:16:30.124980Z",
+     "shell.execute_reply": "2023-05-19T00:16:30.123436Z"
     },
     "papermill": {
-     "duration": 0.081776,
-     "end_time": "2023-05-18T00:27:06.039434",
+     "duration": 0.082484,
+     "end_time": "2023-05-19T00:16:30.127919",
      "exception": false,
-     "start_time": "2023-05-18T00:27:05.957658",
+     "start_time": "2023-05-19T00:16:30.045435",
      "status": "completed"
     },
     "tags": []
@@ -1701,13 +1701,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf7e1236",
+   "id": "c6b057fb",
    "metadata": {
     "papermill": {
-     "duration": 0.0077,
-     "end_time": "2023-05-18T00:27:06.055410",
+     "duration": 0.007745,
+     "end_time": "2023-05-19T00:16:30.143931",
      "exception": false,
-     "start_time": "2023-05-18T00:27:06.047710",
+     "start_time": "2023-05-19T00:16:30.136186",
      "status": "completed"
     },
     "tags": []
@@ -1720,19 +1720,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "82122d19",
+   "id": "2f8821e8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-18T00:27:06.074027Z",
-     "iopub.status.busy": "2023-05-18T00:27:06.073496Z",
-     "iopub.status.idle": "2023-05-18T00:27:21.009216Z",
-     "shell.execute_reply": "2023-05-18T00:27:21.007347Z"
+     "iopub.execute_input": "2023-05-19T00:16:30.162947Z",
+     "iopub.status.busy": "2023-05-19T00:16:30.162046Z",
+     "iopub.status.idle": "2023-05-19T00:16:45.510119Z",
+     "shell.execute_reply": "2023-05-19T00:16:45.508160Z"
     },
     "papermill": {
-     "duration": 14.951194,
-     "end_time": "2023-05-18T00:27:21.014724",
+     "duration": 15.363188,
+     "end_time": "2023-05-19T00:16:45.515275",
      "exception": false,
-     "start_time": "2023-05-18T00:27:06.063530",
+     "start_time": "2023-05-19T00:16:30.152087",
      "status": "completed"
     },
     "tags": []
@@ -1760,38 +1760,38 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dc478d5",
+   "id": "2325e20e",
    "metadata": {
     "papermill": {
-     "duration": 0.016144,
-     "end_time": "2023-05-18T00:27:21.048308",
+     "duration": 0.016502,
+     "end_time": "2023-05-19T00:16:45.549203",
      "exception": false,
-     "start_time": "2023-05-18T00:27:21.032164",
+     "start_time": "2023-05-19T00:16:45.532701",
      "status": "completed"
     },
     "tags": []
    },
    "source": [
     "<a id=\"step-three\"></a>\n",
-    "# Step 3: Data Visualization"
+    "# Step 3: Model Validation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9a7c20e8",
+   "id": "9a82701f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-18T00:27:21.085263Z",
-     "iopub.status.busy": "2023-05-18T00:27:21.084384Z",
-     "iopub.status.idle": "2023-05-18T00:27:21.096522Z",
-     "shell.execute_reply": "2023-05-18T00:27:21.094840Z"
+     "iopub.execute_input": "2023-05-19T00:16:45.586506Z",
+     "iopub.status.busy": "2023-05-19T00:16:45.585737Z",
+     "iopub.status.idle": "2023-05-19T00:16:45.601513Z",
+     "shell.execute_reply": "2023-05-19T00:16:45.599742Z"
     },
     "papermill": {
-     "duration": 0.036289,
-     "end_time": "2023-05-18T00:27:21.101598",
+     "duration": 0.041492,
+     "end_time": "2023-05-19T00:16:45.607844",
      "exception": false,
-     "start_time": "2023-05-18T00:27:21.065309",
+     "start_time": "2023-05-19T00:16:45.566352",
      "status": "completed"
     },
     "tags": []
@@ -1816,19 +1816,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0d228c9c",
+   "id": "275b0a92",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-18T00:27:21.123487Z",
-     "iopub.status.busy": "2023-05-18T00:27:21.122247Z",
-     "iopub.status.idle": "2023-05-18T00:27:21.131089Z",
-     "shell.execute_reply": "2023-05-18T00:27:21.129771Z"
+     "iopub.execute_input": "2023-05-19T00:16:45.635352Z",
+     "iopub.status.busy": "2023-05-19T00:16:45.634898Z",
+     "iopub.status.idle": "2023-05-19T00:16:45.643488Z",
+     "shell.execute_reply": "2023-05-19T00:16:45.642218Z"
     },
     "papermill": {
-     "duration": 0.023168,
-     "end_time": "2023-05-18T00:27:21.133691",
+     "duration": 0.021241,
+     "end_time": "2023-05-19T00:16:45.646136",
      "exception": false,
-     "start_time": "2023-05-18T00:27:21.110523",
+     "start_time": "2023-05-19T00:16:45.624895",
      "status": "completed"
     },
     "tags": []
@@ -1852,19 +1852,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "db54096a",
+   "id": "a48620d1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-18T00:27:21.153068Z",
-     "iopub.status.busy": "2023-05-18T00:27:21.152356Z",
-     "iopub.status.idle": "2023-05-18T00:27:21.159196Z",
-     "shell.execute_reply": "2023-05-18T00:27:21.158267Z"
+     "iopub.execute_input": "2023-05-19T00:16:45.666179Z",
+     "iopub.status.busy": "2023-05-19T00:16:45.665241Z",
+     "iopub.status.idle": "2023-05-19T00:16:45.674481Z",
+     "shell.execute_reply": "2023-05-19T00:16:45.673136Z"
     },
     "papermill": {
-     "duration": 0.019446,
-     "end_time": "2023-05-18T00:27:21.161671",
+     "duration": 0.022684,
+     "end_time": "2023-05-19T00:16:45.677420",
      "exception": false,
-     "start_time": "2023-05-18T00:27:21.142225",
+     "start_time": "2023-05-19T00:16:45.654736",
      "status": "completed"
     },
     "tags": []
@@ -1906,14 +1906,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 31.635852,
-   "end_time": "2023-05-18T00:27:21.994935",
+   "duration": 32.651803,
+   "end_time": "2023-05-19T00:16:46.510073",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-05-18T00:26:50.359083",
+   "start_time": "2023-05-19T00:16:13.858270",
    "version": "2.4.0"
   }
  },
