--- a/linearregression.ipynb
+++ b/linearregression.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "338f2baf",
+   "id": "3d0aeff2",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "papermill": {
-     "duration": 0.006579,
-     "end_time": "2023-05-19T00:16:28.114625",
+     "duration": 0.006469,
+     "end_time": "2023-05-19T23:57:51.847811",
      "exception": false,
-     "start_time": "2023-05-19T00:16:28.108046",
+     "start_time": "2023-05-19T23:57:51.841342",
      "status": "completed"
     },
     "tags": []
@@ -25,20 +25,20 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "85acdad6",
+   "id": "c65eddb4",
    "metadata": {
     "_kg_hide-input": true,
     "execution": {
-     "iopub.execute_input": "2023-05-19T00:16:28.128814Z",
-     "iopub.status.busy": "2023-05-19T00:16:28.127811Z",
-     "iopub.status.idle": "2023-05-19T00:16:29.580500Z",
-     "shell.execute_reply": "2023-05-19T00:16:29.579065Z"
+     "iopub.execute_input": "2023-05-19T23:57:51.861623Z",
+     "iopub.status.busy": "2023-05-19T23:57:51.861012Z",
+     "iopub.status.idle": "2023-05-19T23:57:53.432171Z",
+     "shell.execute_reply": "2023-05-19T23:57:53.430595Z"
     },
     "papermill": {
-     "duration": 1.463882,
-     "end_time": "2023-05-19T00:16:29.584100",
+     "duration": 1.582101,
+     "end_time": "2023-05-19T23:57:53.435548",
      "exception": false,
-     "start_time": "2023-05-19T00:16:28.120218",
+     "start_time": "2023-05-19T23:57:51.853447",
      "status": "completed"
     },
     "tags": []
@@ -57,13 +57,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9af9f816",
+   "id": "08b82b90",
    "metadata": {
     "papermill": {
-     "duration": 0.005752,
-     "end_time": "2023-05-19T00:16:29.596257",
+     "duration": 0.005175,
+     "end_time": "2023-05-19T23:57:53.446170",
      "exception": false,
-     "start_time": "2023-05-19T00:16:29.590505",
+     "start_time": "2023-05-19T23:57:53.440995",
      "status": "completed"
     },
     "tags": []
@@ -76,19 +76,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3bd20549",
+   "id": "4e886c8a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T00:16:29.608970Z",
-     "iopub.status.busy": "2023-05-19T00:16:29.608515Z",
-     "iopub.status.idle": "2023-05-19T00:16:29.818723Z",
-     "shell.execute_reply": "2023-05-19T00:16:29.817273Z"
+     "iopub.execute_input": "2023-05-19T23:57:53.459397Z",
+     "iopub.status.busy": "2023-05-19T23:57:53.458871Z",
+     "iopub.status.idle": "2023-05-19T23:57:53.677142Z",
+     "shell.execute_reply": "2023-05-19T23:57:53.675821Z"
     },
     "papermill": {
-     "duration": 0.220086,
-     "end_time": "2023-05-19T00:16:29.821704",
+     "duration": 0.230069,
+     "end_time": "2023-05-19T23:57:53.681709",
      "exception": false,
-     "start_time": "2023-05-19T00:16:29.601618",
+     "start_time": "2023-05-19T23:57:53.451640",
      "status": "completed"
     },
     "tags": []
@@ -478,19 +478,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "de856edf",
+   "id": "27c2529c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T00:16:29.837823Z",
-     "iopub.status.busy": "2023-05-19T00:16:29.836098Z",
-     "iopub.status.idle": "2023-05-19T00:16:29.865640Z",
-     "shell.execute_reply": "2023-05-19T00:16:29.864355Z"
+     "iopub.execute_input": "2023-05-19T23:57:53.701434Z",
+     "iopub.status.busy": "2023-05-19T23:57:53.700931Z",
+     "iopub.status.idle": "2023-05-19T23:57:53.730350Z",
+     "shell.execute_reply": "2023-05-19T23:57:53.728943Z"
     },
     "papermill": {
-     "duration": 0.04048,
-     "end_time": "2023-05-19T00:16:29.868402",
+     "duration": 0.043394,
+     "end_time": "2023-05-19T23:57:53.733742",
      "exception": false,
-     "start_time": "2023-05-19T00:16:29.827922",
+     "start_time": "2023-05-19T23:57:53.690348",
      "status": "completed"
     },
     "tags": []
@@ -710,19 +710,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0a6970e8",
+   "id": "a9b93157",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T00:16:29.883522Z",
-     "iopub.status.busy": "2023-05-19T00:16:29.882900Z",
-     "iopub.status.idle": "2023-05-19T00:16:29.917209Z",
-     "shell.execute_reply": "2023-05-19T00:16:29.915464Z"
+     "iopub.execute_input": "2023-05-19T23:57:53.751995Z",
+     "iopub.status.busy": "2023-05-19T23:57:53.751445Z",
+     "iopub.status.idle": "2023-05-19T23:57:53.789138Z",
+     "shell.execute_reply": "2023-05-19T23:57:53.787452Z"
     },
     "papermill": {
-     "duration": 0.045671,
-     "end_time": "2023-05-19T00:16:29.920620",
+     "duration": 0.049799,
+     "end_time": "2023-05-19T23:57:53.792336",
      "exception": false,
-     "start_time": "2023-05-19T00:16:29.874949",
+     "start_time": "2023-05-19T23:57:53.742537",
      "status": "completed"
     },
     "tags": []
@@ -770,19 +770,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5f0b9902",
+   "id": "3aa2bb47",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T00:16:29.936202Z",
-     "iopub.status.busy": "2023-05-19T00:16:29.935714Z",
-     "iopub.status.idle": "2023-05-19T00:16:30.035089Z",
-     "shell.execute_reply": "2023-05-19T00:16:30.033797Z"
+     "iopub.execute_input": "2023-05-19T23:57:53.808751Z",
+     "iopub.status.busy": "2023-05-19T23:57:53.807244Z",
+     "iopub.status.idle": "2023-05-19T23:57:53.921081Z",
+     "shell.execute_reply": "2023-05-19T23:57:53.919255Z"
     },
     "papermill": {
-     "duration": 0.110604,
-     "end_time": "2023-05-19T00:16:30.038061",
+     "duration": 0.125601,
+     "end_time": "2023-05-19T23:57:53.924649",
      "exception": false,
-     "start_time": "2023-05-19T00:16:29.927457",
+     "start_time": "2023-05-19T23:57:53.799048",
      "status": "completed"
     },
     "tags": []
@@ -1074,19 +1074,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "11b3231e",
+   "id": "6ab80d67",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T00:16:30.054745Z",
-     "iopub.status.busy": "2023-05-19T00:16:30.054291Z",
-     "iopub.status.idle": "2023-05-19T00:16:30.124980Z",
-     "shell.execute_reply": "2023-05-19T00:16:30.123436Z"
+     "iopub.execute_input": "2023-05-19T23:57:53.946901Z",
+     "iopub.status.busy": "2023-05-19T23:57:53.945654Z",
+     "iopub.status.idle": "2023-05-19T23:57:54.015872Z",
+     "shell.execute_reply": "2023-05-19T23:57:54.014473Z"
     },
     "papermill": {
-     "duration": 0.082484,
-     "end_time": "2023-05-19T00:16:30.127919",
+     "duration": 0.083539,
+     "end_time": "2023-05-19T23:57:54.018820",
      "exception": false,
-     "start_time": "2023-05-19T00:16:30.045435",
+     "start_time": "2023-05-19T23:57:53.935281",
      "status": "completed"
     },
     "tags": []
@@ -1701,13 +1701,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6b057fb",
+   "id": "1ff24e6b",
    "metadata": {
     "papermill": {
-     "duration": 0.007745,
-     "end_time": "2023-05-19T00:16:30.143931",
+     "duration": 0.007699,
+     "end_time": "2023-05-19T23:57:54.034764",
      "exception": false,
-     "start_time": "2023-05-19T00:16:30.136186",
+     "start_time": "2023-05-19T23:57:54.027065",
      "status": "completed"
     },
     "tags": []
@@ -1720,32 +1720,28 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2f8821e8",
+   "id": "eccb0a79",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T00:16:30.162947Z",
-     "iopub.status.busy": "2023-05-19T00:16:30.162046Z",
-     "iopub.status.idle": "2023-05-19T00:16:45.510119Z",
-     "shell.execute_reply": "2023-05-19T00:16:45.508160Z"
+     "iopub.execute_input": "2023-05-19T23:57:54.053735Z",
+     "iopub.status.busy": "2023-05-19T23:57:54.053263Z",
+     "iopub.status.idle": "2023-05-19T23:58:09.094125Z",
+     "shell.execute_reply": "2023-05-19T23:58:09.091873Z"
     },
     "papermill": {
-     "duration": 15.363188,
-     "end_time": "2023-05-19T00:16:45.515275",
+     "duration": 15.056763,
+     "end_time": "2023-05-19T23:58:09.099529",
      "exception": false,
-     "start_time": "2023-05-19T00:16:30.152087",
+     "start_time": "2023-05-19T23:57:54.042766",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "X = df['sqft_living']\n",
+    "X = np.array(df['sqft_living']).reshape(1, -1)\n",
     "\n",
-    "y = df['price']\n",
-    "\n",
-    "X = np.array(X).reshape(1, -1)\n",
-    "\n",
-    "y = np.array(y).reshape(1, -1)\n",
+    "y = np.array(df['price']).reshape(1, -1)\n",
     "\n",
     "\n",
     "# Initialize Linear Regression Model and train\n",
@@ -1760,13 +1756,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2325e20e",
+   "id": "25918369",
    "metadata": {
     "papermill": {
-     "duration": 0.016502,
-     "end_time": "2023-05-19T00:16:45.549203",
+     "duration": 0.016591,
+     "end_time": "2023-05-19T23:58:09.134382",
      "exception": false,
-     "start_time": "2023-05-19T00:16:45.532701",
+     "start_time": "2023-05-19T23:58:09.117791",
      "status": "completed"
     },
     "tags": []
@@ -1779,19 +1775,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9a82701f",
+   "id": "a07f7286",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T00:16:45.586506Z",
-     "iopub.status.busy": "2023-05-19T00:16:45.585737Z",
-     "iopub.status.idle": "2023-05-19T00:16:45.601513Z",
-     "shell.execute_reply": "2023-05-19T00:16:45.599742Z"
+     "iopub.execute_input": "2023-05-19T23:58:09.171933Z",
+     "iopub.status.busy": "2023-05-19T23:58:09.171141Z",
+     "iopub.status.idle": "2023-05-19T23:58:09.194858Z",
+     "shell.execute_reply": "2023-05-19T23:58:09.192609Z"
     },
     "papermill": {
-     "duration": 0.041492,
-     "end_time": "2023-05-19T00:16:45.607844",
+     "duration": 0.049624,
+     "end_time": "2023-05-19T23:58:09.201481",
      "exception": false,
-     "start_time": "2023-05-19T00:16:45.566352",
+     "start_time": "2023-05-19T23:58:09.151857",
      "status": "completed"
     },
     "tags": []
@@ -1816,19 +1812,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "275b0a92",
+   "id": "e205d945",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T00:16:45.635352Z",
-     "iopub.status.busy": "2023-05-19T00:16:45.634898Z",
-     "iopub.status.idle": "2023-05-19T00:16:45.643488Z",
-     "shell.execute_reply": "2023-05-19T00:16:45.642218Z"
+     "iopub.execute_input": "2023-05-19T23:58:09.224848Z",
+     "iopub.status.busy": "2023-05-19T23:58:09.223708Z",
+     "iopub.status.idle": "2023-05-19T23:58:09.231240Z",
+     "shell.execute_reply": "2023-05-19T23:58:09.230278Z"
     },
     "papermill": {
-     "duration": 0.021241,
-     "end_time": "2023-05-19T00:16:45.646136",
+     "duration": 0.019545,
+     "end_time": "2023-05-19T23:58:09.233789",
      "exception": false,
-     "start_time": "2023-05-19T00:16:45.624895",
+     "start_time": "2023-05-19T23:58:09.214244",
      "status": "completed"
     },
     "tags": []
@@ -1852,19 +1848,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a48620d1",
+   "id": "5418200e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T00:16:45.666179Z",
-     "iopub.status.busy": "2023-05-19T00:16:45.665241Z",
-     "iopub.status.idle": "2023-05-19T00:16:45.674481Z",
-     "shell.execute_reply": "2023-05-19T00:16:45.673136Z"
+     "iopub.execute_input": "2023-05-19T23:58:09.253382Z",
+     "iopub.status.busy": "2023-05-19T23:58:09.252562Z",
+     "iopub.status.idle": "2023-05-19T23:58:09.259888Z",
+     "shell.execute_reply": "2023-05-19T23:58:09.258785Z"
     },
     "papermill": {
-     "duration": 0.022684,
-     "end_time": "2023-05-19T00:16:45.677420",
+     "duration": 0.020817,
+     "end_time": "2023-05-19T23:58:09.263040",
      "exception": false,
-     "start_time": "2023-05-19T00:16:45.654736",
+     "start_time": "2023-05-19T23:58:09.242223",
      "status": "completed"
     },
     "tags": []
@@ -1906,14 +1902,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 32.651803,
-   "end_time": "2023-05-19T00:16:46.510073",
+   "duration": 33.556866,
+   "end_time": "2023-05-19T23:58:10.095118",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-05-19T00:16:13.858270",
+   "start_time": "2023-05-19T23:57:36.538252",
    "version": "2.4.0"
   }
  },
